--- a/style.css
+++ b/style.css
@@ -58,7 +58,11 @@ border : none;
 padding :  0 0.3em;
 }
 
-img {
+#content {
+  margin-bottom: 200px;
+}
+
+#content > img {
   position: absolute;
   margin-left: 20px;
 }
@@ -74,19 +78,120 @@ img {
     font-size: 16px;
 }
 
+#installationClient {
+  border: 1px black solid;
+  position: absolute;
+  width: 45%;
+  height: auto;
+  margin-left: 20px;
+  margin-top: 20px;
+  background: #40A497;
+}
+
+#installationServeur {
+  border: 1px black solid;
+  position: absolute;
+  width: 45%;
+  height: auto;
+  right: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  background: #40A497;
+}
+
+#installationClient > h2 {
+  padding: 5px 5px 5px 5px;
+  text-align: center;
+}
+
+#installationServeur > h2 {
+  padding: 5px 5px 5px 5px;
+  text-align: center;
+}
+
+#installationClient > h3 {
+  padding-left: 20px;
+}
+
+#installationServeur > h3 {
+  padding-left: 20px;
+}
+
+#installationClient > p, li, ul, {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#installationServeur > p, li, ul, {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#installationClient > p {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#installationServeur > p {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#installationClient > p#installed, p#notInstalled {
+  padding: 0px 20px 0px 20px;
+  left: 20px;
+  color: black;
+}
+
+#installationClient > img {
+  position: relative;
+  margin-left: 20px;
+}
+
+p#code {
+  background: black;
+  color: white;
+}
+
+#contactForm {
+  margin-left: 30%;
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+#space {
+  position: absolute;
+  bottom: 0px;
+}
+
 #footer {
-   position: absolute;
+   position: fixed;
    margin-left: -10px;
    margin-right: -10px;
-   bottom: 0;
+   bottom: 0px;
    width: 100%;
    background: #40A497;
  }
 
-#config {
-  position: absolute;
+#footer > hr {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+#aptmirror {
+  position: relative;
   width: 500px;
-  left: 400px;
+  left: 300px;
+  margin-top: 15px;
+  padding-left: 20px;
+  border: 1px black solid;
+}
+
+#apache {
+  position: relative;
+  width: 500px;
+  left: 300px;
   margin-top: 15px;
   padding-left: 20px;
   border: 1px black solid;
